app/styles/right.scss
.main-content {

  .content {
    background-color: white;

    .right {
      flex: 1;
      background-color: white;
      padding: 2em;
      box-sizing: border-box;

      .evaluator {
        input {
          margin-left: -1%;
        }

        button {
          margin-left: -1%;

          &.button-with-distance {
            margin-left: 1%;
          }
        }

        a:not(.akep) {
          margin-left: -1%;
        }

        a.akep {
          margin-left: 1%;
        }

        .btn--toggle {
          margin-left: -1%;
        }

      }

      .demonstrator {
        .demonstrator-group, .evaluation-student {
          .deliverable, .laboratory-evaluation, .entry-test-evaluation {
            border-top: solid black 1px;
          }

          a, input, button {
            margin-left: -1%;
          }

          button {
            &.btn--toggle {
              display: block;
            }
            &.cancel {
              margin-left: 1%;
            }

          }

          .akep {
            margin-left: 1%;
          }
        }
      }

      .error-page{
        .title {
          margin-top: 3%;
        }
      }

      .news {
        .show-news-message {
          margin-top: 3%;
        }
      }

      .directory {
        button {
          &.btn--toggle {
            margin-left: -1%;
            display: block;
          }
        }
        a, input, button {
          margin-left: -1%;

          &.cancel {
            margin-left: 1%;
          }
        }

        .basic-settings {
          border-bottom: solid black 1px;
          padding-bottom: 3%;
        }
        .directory-actions {
          border-top: solid black 1px;
          padding-top: 3%;
        }
        .directory-settings-student {
          .student-registration {
            padding-top: 3%;
            .sub-label {
              padding-left: 1.5%;
              margin-top: 1%;
            }
            // border-top: solid black 1px;
            .student-event {
              padding: 0 0 2% 3%;
              border-bottom: solid black 1px;

              .change-time {
                .time-input {
                  margin-left: -1%;
                  display: inline-block;
                  width: 280px;
                  input {
                    display: inline-block;
                    max-width: 80px;
                    min-width: 20px;
                    margin: 0 0.5%;

                    &.time {
                      max-width: 20px;
                    }
                  }
                }

                .button, button {
                  display: inline-block;
                  margin-top: 0;
                }

                .success-box {
            			display: inline-block;
            			margin: 0 0 0  2%;
            		}
              }

                .definalize-actions {
                  button, .button {
                    margin-right: 1%;
                  }
                }
            }

          }
        }
        .directory-settings-evaluator {
          .toggle-buttons {
            display: block;

              .btn--toggle {
                i {
                  width: 20px;
                }
                &:before {
                  display: none;
                }
              }
          }

          button {
            display: block;
            margin-top: 0;
          }

        }
        .directory-fields {
          margin-top: 1%;

          .directory-field {
            input {
              margin-top: 1%;
            }
          }
        }
      }

      .settings {
        button {
          &.btn--toggle {
            margin-left: -1%;
          }
        }
        input, button {
          margin-left: -1%;
        }
      }

      .statistics {
        .statistics-content {
          margin-top: 1%;
        }
      }

      .student {
        .lab-finalized {
          border-top: solid 1px black;
        }

        .deliverables {
          border-top: solid 1px black;
          .deliverable {
            &:not(:last-child){
            border-bottom: solid 1px black;
          }
          }
        }
        .tagSelector{
          margin-left: -1%;
        }
      }

      .entry-test {
        .entry-test-creator {
          input, .save {
            margin-left: -1%;

          }
        }
      }
      .dashboard {
        .dashboard-creator{
          input{
            width: 18%;
          }
          .labChooser{
            margin-left: -1%;
            margin-top: 1%;
          }
          .timeChooser{
            margin-left: -1%;
            margin-top: 1%;
          }
          .teacherChooser{
            margin-left: -1%;
            margin-top: 1%;
          }
          .roomChooser{
            margin-left: -1%;
            margin-top: 1%;
          }
        }
      }

      .notification {
        .notification-creator {
          input {
            margin-left: -1%;
          }
          .toggle-buttons {
            button {
              &.btn--toggle {
                display: block;
                margin-left: -1%;
              }
            }
          }
        }
      }
    }
  }
}

